[package]
name = "fractalize-ebpf-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
fractalize-ebpf-common = { path = "../fractalize-ebpf-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
network-types = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "fractalize-ebpf"
path = "src/main.rs"
