[package]
name = "xdp-fire-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
xdp-fire-common = { path = "../xdp-fire-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
network-types = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "xdp-fire"
path = "src/main.rs"
